# OpenAccStudy

./: README.md
Chapter01/accCounter/: Makefile  readme.md
Chapter01/accCounterAtomic/: Makefile
Chapter01/accFill_ex1/: Makefile  readme.md
Chapter01/accFill_ex2/: Makefile  readme.md
Chapter01/accTask/: Makefile  accTask.cpp  readme.md
Chapter02/00-original/mycode/: Makefile  readme.md
Chapter02/02-accelerate_waxpby/book/: Makefile
Chapter02/02-accelerate_waxpby/mycode/: Makefile
Chapter02/03-accelerate_dot/mycode/: Makefile  readme.md
Chapter02/06-reduce_vector_length/mycode_small/: main.cpp
cmake/testaccfstream_v14/: CMakeLists.txt  Makefile  main.cpp
cmake/testaccfstream_v9/: CMakeLists.txt  main.cpp
cmake/testmpicuda_acc_cmake_v4/: CMakeLists.txt  laplace2d.h  main.cpp
cmake/testmpicuda_acc_cmake_v5/: CMakeLists.txt
hpc/lab1/solutions/: Makefile
modified/laplace2d/: laplace2d.cpp
modified/laplace2d_normal/: Makefile  laplace2d.cpp
modified/laplace2d_v1/: CMakeLists.txt  Makefile  laplace2d.cpp  timer.h
modified/laplace2d_v10/: laplace2d.cpp
modified/laplace2d_v11/: Makefile  laplace2d.cpp
modified/laplace2d_v12/: Makefile  laplace2d.cpp
modified/laplace2d_v2/: laplace2d.cpp
modified/laplace2d_v3/: Makefile
modified/laplace2d_v4/: Makefile  laplace2d.cpp
modified/laplace2d_v5/: Makefile
modified/laplace2d_v6/: laplace2d.cpp
modified/laplace2d_v7/: laplace2d.cpp
modified/laplace2d_v8/: laplace2d.cpp
modified/laplace2d_v9/: laplace2d.cpp
